src/objects/QPMS__IMDRF_Cause_Investigation_Code__c.object
<CustomObject>
    <description>Europe form child object -  IMDRF Cause Investigation Code</description>
    <fields>
        <fullName>QPMS__Annex_D_incident_unique_explain__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain</inlineHelpText>
        <label>If you think incident unique, explain</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Manufacturer_analysis__r.QPMS__ComplaintId__c</formula>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>QPMS__Manufacturer_analysis__r.QPMS__Follow_Up_Number__c</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_B_Choice_1_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 1 (most relevant) Code</description>
        <inlineHelpText>Choice 1 (most relevant) Code</inlineHelpText>
        <label>Choice 1 (most relevant) Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_B_Choice_2_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 2 Code</description>
        <inlineHelpText>Choice 2 Code</inlineHelpText>
        <label>Choice 2 Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Choice 2 Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_B_Choice_3_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 3 Code</description>
        <inlineHelpText>Choice 3 Code</inlineHelpText>
        <label>Choice 3 Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Choice 3 Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_C_Code_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_C_Code_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_C_Code_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTZK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_D_Code_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTZU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_D_Code_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTZe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_D_Code_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Code</description>
        <inlineHelpText>Code</inlineHelpText>
        <label>Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTZo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_G_Choice_1_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 1 (most relevant) Code</description>
        <inlineHelpText>Choice 1 (most relevant) Code</inlineHelpText>
        <label>Choice 1 (most relevant) Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Choice 1 (most relevant) Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTb6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_G_Choice_2_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 2 Code</description>
        <inlineHelpText>Choice 2 Code</inlineHelpText>
        <label>Choice 2 Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Choice 2 Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTbG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IMDRF_Annex_G_Choice_3_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choice 3 Code</description>
        <inlineHelpText>Choice 3 Code</inlineHelpText>
        <label>Choice 3 Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes (Choice 3 Code)</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_CodeslTbu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer analysis</label>
        <referenceTo>QPMS__Manufacturer_analysis__c</referenceTo>
        <relationshipLabel>IMDRF Cause Investigation Codes</relationshipLabel>
        <relationshipName>IMDRF_Cause_Investigation_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Manufacturer_analysis__r.QPMS__Regulatory_Body__c</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <label>IMDRF Cause Investigation Code</label>
    <nameField>
        <label>IMDRF Cause Investigation Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMDRF Cause Investigation Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>